<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ContactActivity"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="95"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/busback_dark"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:text="@string/contact"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_description"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:textSize="17sp"
            android:textColor="@android:color/black" />


    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="@string/nazad"
        android:background="@color/colorAccentMine"/>
</LinearLayout>